--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
 
       <!-- Center: Logo -->
       <div class="nav-center">
-        <a href="#home" class="text-logo">GLORIA LÓPEZ</a>
+        <a href="#home" class="text-logo">
+          <div class="brand-line-1">GLOR BIENES RAÍCES</div>
+          <div class="brand-line-2">By GloTheRealtor</div>
+        </a>
       </div>
 
       <!-- Right: Actions -->
@@ -571,15 +574,7 @@
     </div>
   </footer>
 
-  <!-- ========== FLOATING WHATSAPP BUTTON ========== -->
-  <div class="floating-whatsapp" aria-label="Chat on WhatsApp">
-    <svg class="icon-svg" style="width: 32px; height: 32px; stroke: white;" viewBox="0 0 24 24" fill="none"
-      stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path
-        d="M21 11.5a8.38 8.38 0 0 1-.9 3.8 8.5 8.5 0 0 1-7.6 4.7 8.38 8.38 0 0 1-3.8-.9L3 21l1.9-5.7a8.38 8.38 0 0 1-.9-3.8 8.5 8.5 0 0 1 4.7-7.6 8.38 8.38 0 0 1 3.8-.9h.5a8.48 8.48 0 0 1 8 8v.5z">
-      </path>
-    </svg>
-  </div>
+
 
   <!-- ========== FULL SCREEN MENU ========== -->
   <div class="full-screen-menu">
