Fix: Brand header display on single line

--- a/index.html
+++ b/index.html
@@ -99,9 +99,11 @@
 
       <!-- Center: Logo -->
       <div class="nav-center">
-        <a href="#home" class="text-logo">
-          <div class="brand-line-1">GLOR BIENES RAÍCES</div>
-          <div class="brand-line-2">By GloTheRealtor</div>
+        <a href="#home" style="text-decoration: none;">
+          <div class="brand-header">
+            <h1 class="brand-main">GLOR BIENES RAÍCES</h1>
+            <p class="brand-subtitle">By GloTheRealtor</p>
+          </div>
         </a>
       </div>
 
