Update: Hero section - GLOR branding + bottom-left text

--- a/index.html
+++ b/index.html
@@ -66,66 +66,57 @@
 
   <!-- ========== NAVIGATION ========== -->
   <!-- ========== NAVIGATION ========== -->
-  <nav class="navbar">
-    <div class="container-fluid">
-      <!-- Left: Dropdowns -->
-      <div class="nav-left">
-        <div class="nav-item dropdown">
-          <span class="nav-link">ACERCA DE <span class="chevron">▼</span></span>
-          <div class="dropdown-menu">
-            <a href="#about">Gloria López</a>
-            <a href="#experience">Experiencia</a>
-            <a href="#certifications">Certificaciones</a>
-          </div>
-        </div>
-        <div class="nav-item dropdown">
-          <span class="nav-link">PROPIEDADES <span class="chevron">▼</span></span>
-          <div class="dropdown-menu">
-            <a href="#properties">En Venta</a>
-            <a href="#">Rentadas</a>
-            <a href="#">Vendidas</a>
-            <a href="#">Exclusivas</a>
-          </div>
-        </div>
-        <div class="nav-item dropdown">
-          <span class="nav-link">MEDIA <span class="chevron">▼</span></span>
-          <div class="dropdown-menu">
-            <a href="#">Galería</a>
-            <a href="#">Videos</a>
-            <a href="#">Prensa</a>
-          </div>
+  <nav class="navbar navigation-bar">
+    <div class="nav-left">
+      <div class="nav-item dropdown">
+        <span class="nav-link">ACERCA DE <span class="chevron">▼</span></span>
+        <div class="dropdown-menu">
+          <a href="#about">Gloria López</a>
+          <a href="#experience">Experiencia</a>
+          <a href="#certifications">Certificaciones</a>
         </div>
       </div>
+      <div class="nav-item dropdown">
+        <span class="nav-link">PROPIEDADES <span class="chevron">▼</span></span>
+        <div class="dropdown-menu">
+          <a href="#properties">En Venta</a>
+          <a href="#">Rentadas</a>
+          <a href="#">Vendidas</a>
+          <a href="#">Exclusivas</a>
+        </div>
+      </div>
+      <div class="nav-item dropdown">
+        <span class="nav-link">MEDIA <span class="chevron">▼</span></span>
+        <div class="dropdown-menu">
+          <a href="#">Galería</a>
+          <a href="#">Videos</a>
+          <a href="#">Prensa</a>
+        </div>
+      </div>
+    </div>
 
-      <!-- Center: Logo -->
-      <div class="nav-center">
-        <a href="#home" style="text-decoration: none;">
-          <div class="brand-header">
-            <h1 class="brand-main">GLOR BIENES RAÍCES</h1>
-            <p class="brand-subtitle">By GloTheRealtor</p>
-          </div>
-        </a>
-      </div>
+    <div class="brand-header">
+      <h1 class="brand-main">GLOR BIENES RAÍCES</h1>
+      <p class="brand-subtitle">By GloTheRealtor</p>
+    </div>
 
-      <!-- Right: Actions -->
-      <div class="nav-right">
-        <a href="#contact" class="nav-contact">CONTACTO</a>
-        <button class="nav-icon search-trigger" aria-label="Search">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-            stroke-linecap="round" stroke-linejoin="round">
-            <circle cx="11" cy="11" r="8"></circle>
-            <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
-          </svg>
-        </button>
-        <button class="nav-icon menu-trigger" aria-label="Menu">
-          <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-            stroke-linecap="round" stroke-linejoin="round">
-            <line x1="3" y1="12" x2="21" y2="12"></line>
-            <line x1="3" y1="6" x2="21" y2="6"></line>
-            <line x1="3" y1="18" x2="21" y2="18"></line>
-          </svg>
-        </button>
-      </div>
+    <div class="nav-right">
+      <a href="#contact" class="nav-contact">CONTACTO</a>
+      <button class="nav-icon search-trigger" aria-label="Search">
+        <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <circle cx="11" cy="11" r="8"></circle>
+          <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+        </svg>
+      </button>
+      <button class="nav-icon menu-trigger" aria-label="Menu">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
+          stroke-linecap="round" stroke-linejoin="round">
+          <line x1="3" y1="12" x2="21" y2="12"></line>
+          <line x1="3" y1="6" x2="21" y2="6"></line>
+          <line x1="3" y1="18" x2="21" y2="18"></line>
+        </svg>
+      </button>
     </div>
   </nav>
 
