--- a/index.html
+++ b/index.html
@@ -384,58 +384,34 @@
 
   <!-- ========== WHY CHOOSE GLOR ========== -->
   <section id="why-choose" class="why-choose">
-    <div class="section-background"></div>
-    <div class="section-overlay"></div>
     <div class="container">
+      <!-- Eyebrow & Heading -->
+      <div class="section-eyebrow">EXCELENCIA</div>
+      <div class="eyebrow-line"></div>
+
       <h2 class="section-title fade-in" data-i18n="whyChoose.title">¿Por Qué Elegir GLOR?</h2>
+      <p class="section-subheading fade-in">Especialistas en bienes raíces de lujo en Riviera Maya con trayectoria
+        comprobada</p>
 
       <div class="why-glor-grid">
         <div class="stat-card fade-in">
-          <div class="stat-icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path
-                d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z" />
-            </svg>
-          </div>
           <div class="stat-number">100%</div>
-          <div class="stat-label" data-i18n="whyChoose.satisfaction">Satisfacción del Cliente</div>
+          <div class="stat-label" data-i18n="whyChoose.satisfaction">SATISFACCIÓN DEL CLIENTE</div>
         </div>
 
         <div class="stat-card fade-in">
-          <div class="stat-icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
-              <path d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
-            </svg>
-          </div>
           <div class="stat-number">9+</div>
-          <div class="stat-label" data-i18n="whyChoose.coverage">Áreas de Cobertura</div>
+          <div class="stat-label" data-i18n="whyChoose.coverage">ÁREAS DE COBERTURA</div>
         </div>
 
         <div class="stat-card fade-in">
-          <div class="stat-icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path
-                d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" />
-            </svg>
-          </div>
           <div class="stat-number">100+</div>
-          <div class="stat-label" data-i18n="whyChoose.propertiesSold">Propiedades Vendidas</div>
+          <div class="stat-label" data-i18n="whyChoose.propertiesSold">PROPIEDADES VENDIDAS</div>
         </div>
 
         <div class="stat-card fade-in">
-          <div class="stat-icon">
-            <svg class="icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
-              stroke-linecap="round" stroke-linejoin="round">
-              <path
-                d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-            </svg>
-          </div>
           <div class="stat-number">ES/EN</div>
-          <div class="stat-label" data-i18n="whyChoose.bilingual">Servicio Bilingüe</div>
+          <div class="stat-label" data-i18n="whyChoose.bilingual">SERVICIO BILINGÜE</div>
         </div>
       </div>
     </div>
