cambio de letra y estilo premium

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <div class="contact-overlay"></div>
     <div class="container">
       <div class="contact-content fade-in">
-        <h2 data-i18n="contact.title">¿Listo para Encontrar tu Propiedad Soñada?</h2>
+        <h2 class="section-title" data-i18n="contact.title">¿Listo para Encontrar tu Propiedad Soñada?</h2>
         <p data-i18n="contact.subtitle">Comencemos tu viaje inmobiliario en Riviera Maya hoy.</p>
 
         <div class="contact-buttons">
